tests/snapshots/dbc-cantools/issue_62.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
messages:
  - id:
      Extended: 0
    name: VECTOR__INDEPENDENT_SIG_MSG
    size: 0
    transmitter: ~
    signals:
      - name: NumberOfMembersInWorkingSet
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: SourceAddress
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: NncntnuslyMonitoredSystemsStatus
        multiplexer_indicator: Plain
        start_bit: 0
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: NncntnslyMonitoredSystemsSupport
        multiplexer_indicator: Plain
        start_bit: 0
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: CntnslyMntrdSystmsSupport_Status
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: AETCTorqueValue
        multiplexer_indicator: Plain
        start_bit: 0
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 64255
        unit: Nm
      - name: TrailerWeight
        multiplexer_indicator: Plain
        start_bit: 0
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 2
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 128510
        unit: kg
      - name: ReferenceTirePressSetting
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 8
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 2000
        unit: kPa
      - name: ReferenceTirePress
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 8
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 2000
        unit: kPa
      - name: TirePressThresholdDetection
        multiplexer_indicator: Plain
        start_bit: 0
        size: 3
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 7
        unit: ""
      - name: TireAirLeakageRate
        multiplexer_indicator: Plain
        start_bit: 0
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Double: 6425.5
        unit: Pa/s
      - name: CTIWheelEndElectricalFault
        multiplexer_indicator: Plain
        start_bit: 0
        size: 2
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 3
        unit: ""
      - name: CTITireStatus
        multiplexer_indicator: Plain
        start_bit: 0
        size: 2
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 3
        unit: ""
      - name: CTIWheelSensorStatus
        multiplexer_indicator: Plain
        start_bit: 0
        size: 2
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 3
        unit: ""
      - name: TireTemp
        multiplexer_indicator: Plain
        start_bit: 0
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.03125
        offset: -273
        min:
          Int: -273
        max:
          Double: 1734.96875
        unit: deg C
      - name: TirePress
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 4
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 1000
        unit: kPa
      - name: EngTurningGearEngaged
        multiplexer_indicator: Plain
        start_bit: 0
        size: 2
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 3
        unit: ""
      - name: AETCSpeedValue
        multiplexer_indicator: Plain
        start_bit: 0
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.125
        offset: 0
        min:
          Uint: 0
        max:
          Double: 8031.875
        unit: rpm
