tests/snapshots/dbc-cantools/issue_63.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
messages:
  - id:
      Extended: 419204094
    name: AFT1PSI2
    size: 8
    transmitter: ~
    signals:
      - name: HtrRes
        multiplexer_indicator: Plain
        start_bit: 40
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Double: 6425.5
        unit: ohm
      - name: MaxRes
        multiplexer_indicator: Plain
        start_bit: 32
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 250
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 62500
        unit: kohm
      - name: Temp
        multiplexer_indicator: Plain
        start_bit: 16
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.03125
        offset: -273
        min:
          Int: -273
        max:
          Double: 1734.96875
        unit: ï¿½C
      - name: RegenFailedCount
        multiplexer_indicator: Plain
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 250
        unit: ""
      - name: PwrSupply
        multiplexer_indicator: Plain
        start_bit: 4
        size: 2
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 3
        unit: ""
      - name: DetectionStatus
        multiplexer_indicator: Plain
        start_bit: 0
        size: 4
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 15
        unit: ""
