tests/snapshots/dbc-cantools/issue_636_negative_scaling.snap
---
source: tests/snapshots.rs
---
version: "1.0"
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - PCM1
  - FOO
value_tables:
  - name: TempValueTable
    descriptions:
      - id: 4095
        description: Error
      - id: 4094
        description: Init
messages:
  - id:
      Standard: 496
    name: ExampleMessage
    size: 2
    transmitter: PCM1
    signals:
      - name: Temperature
        multiplexer_indicator: Plain
        start_bit: 3
        size: 12
        byte_order: BigEndian
        value_type: Unsigned
        factor: -0.01
        offset: 4100
        min:
          Uint: 4070
        max:
          Uint: 4100
        unit: degK
        receivers:
          - PCM1
          - FOO
comments:
  - Message:
      id:
        Standard: 496
      comment: Example message
attribute_definitions:
  - Signal:
      - GenSigStartValue
      - Int:
          - Int: -2147483648
          - Uint: 2147483647
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 65535
attribute_defaults:
  - name: GenSigStartValue
    value:
      Uint: 0
  - name: GenMsgCycleTime
    value:
      Uint: 0
attribute_values_signal:
  - name: GenSigStartValue
    message_id:
      Standard: 496
    signal_name: Temperature
    value:
      Uint: 4094
value_descriptions:
  - Signal:
      message_id:
        Standard: 496
      name: Temperature
      value_descriptions:
        - id: 4095
          description: Error
        - id: 4094
          description: Init
