tests/snapshots/dbc-cantools/issue_725.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - Node2
  - Node1
messages:
  - id:
      Standard: 1
    name: TestMessage
    size: 1
    transmitter: Node1
    signals:
      - name: Signal1
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 250
        unit: ""
        receivers:
          - Node2
attribute_definitions:
  - Plain:
      - MultiplexExtEnabled
      - Enum:
          - "No"
          - "Yes"
  - Plain:
      - BusType
      - String
  - Plain:
      - DBName
      - String
  - Signal:
      - GenSigStartValue
      - Int:
          - Int: -2147483648
          - Uint: 2147483647
attribute_defaults:
  - name: MultiplexExtEnabled
    value:
      String: "No"
  - name: BusType
    value:
      String: CAN
  - name: DBName
    value:
      String: ""
  - name: GenSigStartValue
    value:
      Int: -2147483648
attribute_values_database:
  - name: DBName
    value:
      String: test
attribute_values_signal:
  - name: GenSigStartValue
    message_id:
      Standard: 1
    signal_name: Signal1
    value:
      Uint: 254
