tests/snapshots/dbc-cantools/j1939.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - Node2
  - Node1
messages:
  - id:
      Extended: 355729921
    name: Message1
    size: 8
    transmitter: Node1
    signals:
      - name: Signal1
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - Node2
  - id:
      Extended: 368054274
    name: Message2
    size: 8
    transmitter: Node2
    signals:
      - name: Signal2
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - Node1
attribute_definitions:
  - Message:
      - TpJ1939VarDlc
      - Enum:
          - "No"
          - "Yes"
  - Signal:
      - SigType
      - Enum:
          - Default
          - Range
          - RangeSigned
          - ASCII
          - Discrete
          - Control
          - ReferencePGN
          - DTC
          - StringDelimiter
          - StringLength
          - StringLengthControl
          - MessageCounter
          - MessageChecksum
  - Signal:
      - GenSigEVName
      - String
  - Signal:
      - GenSigILSupport
      - Enum:
          - "No"
          - "Yes"
  - Signal:
      - GenSigSendType
      - Enum:
          - Cyclic
          - OnWrite
          - OnWriteWithRepetition
          - OnChange
          - OnChangeWithRepetition
          - IfActive
          - IfActiveWithRepetition
          - NoSigSendType
  - Message:
      - GenMsgFastOnStart
      - Int:
          - Uint: 0
          - Uint: 100000
  - Signal:
      - GenSigInactiveValue
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - GenMsgCycleTimeFast
      - Int:
          - Uint: 0
          - Uint: 3600000
  - Message:
      - GenMsgNrOfRepetition
      - Int:
          - Uint: 0
          - Uint: 1000000
  - Signal:
      - GenSigStartValue
      - Int:
          - Uint: 0
          - Uint: 2147483647
  - Message:
      - GenMsgDelayTime
      - Int:
          - Uint: 0
          - Uint: 1000
  - Message:
      - GenMsgILSupport
      - Enum:
          - "No"
          - "Yes"
  - Message:
      - GenMsgStartDelayTime
      - Int:
          - Uint: 0
          - Uint: 100000
  - Node:
      - NodeLayerModules
      - String
  - Node:
      - ECU
      - String
  - Node:
      - NmJ1939SystemInstance
      - Int:
          - Uint: 0
          - Uint: 15
  - Node:
      - NmJ1939System
      - Int:
          - Uint: 0
          - Uint: 127
  - Node:
      - NmJ1939ManufacturerCode
      - Int:
          - Uint: 0
          - Uint: 2047
  - Node:
      - NmJ1939IndustryGroup
      - Int:
          - Uint: 0
          - Uint: 7
  - Node:
      - NmJ1939IdentityNumber
      - Int:
          - Uint: 0
          - Uint: 2097151
  - Node:
      - NmJ1939FunctionInstance
      - Int:
          - Uint: 0
          - Uint: 7
  - Node:
      - NmJ1939Function
      - Int:
          - Uint: 0
          - Uint: 255
  - Node:
      - NmJ1939ECUInstance
      - Int:
          - Uint: 0
          - Uint: 3
  - Node:
      - NmJ1939AAC
      - Int:
          - Uint: 0
          - Uint: 1
  - Node:
      - NmStationAddress
      - Int:
          - Uint: 0
          - Uint: 255
  - Message:
      - GenMsgSendType
      - Enum:
          - cyclic
          - NotUsed
          - IfActive
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - noMsgSendType
  - Message:
      - GenMsgRequestable
      - Int:
          - Uint: 0
          - Uint: 1
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 3600000
  - Signal:
      - SPN
      - Int:
          - Uint: 0
          - Uint: 524287
  - Plain:
      - DBName
      - String
  - Plain:
      - BusType
      - String
  - Plain:
      - ProtocolType
      - String
  - Message:
      - VFrameFormat
      - Enum:
          - StandardCAN
          - ExtendedCAN
          - reserved
          - J1939PG
attribute_defaults:
  - name: TpJ1939VarDlc
    value:
      String: "No"
  - name: SigType
    value:
      String: Default
  - name: GenSigEVName
    value:
      String: Env@Nodename_@Signame
  - name: GenSigILSupport
    value:
      String: "Yes"
  - name: GenSigSendType
    value:
      String: NoSigSendType
  - name: GenMsgFastOnStart
    value:
      Uint: 0
  - name: GenSigInactiveValue
    value:
      Uint: 0
  - name: GenMsgCycleTimeFast
    value:
      Uint: 0
  - name: GenMsgNrOfRepetition
    value:
      Uint: 0
  - name: GenSigStartValue
    value:
      Uint: 0
  - name: GenMsgDelayTime
    value:
      Uint: 0
  - name: GenMsgILSupport
    value:
      String: "Yes"
  - name: GenMsgStartDelayTime
    value:
      Uint: 0
  - name: NodeLayerModules
    value:
      String: ""
  - name: ECU
    value:
      String: ""
  - name: NmJ1939SystemInstance
    value:
      Uint: 0
  - name: NmJ1939System
    value:
      Uint: 0
  - name: NmJ1939ManufacturerCode
    value:
      Uint: 0
  - name: NmJ1939IndustryGroup
    value:
      Uint: 0
  - name: NmJ1939IdentityNumber
    value:
      Uint: 0
  - name: NmJ1939FunctionInstance
    value:
      Uint: 0
  - name: NmJ1939Function
    value:
      Uint: 0
  - name: NmJ1939ECUInstance
    value:
      Uint: 0
  - name: NmJ1939AAC
    value:
      Uint: 0
  - name: NmStationAddress
    value:
      Uint: 254
  - name: GenMsgSendType
    value:
      String: noMsgSendType
  - name: GenMsgRequestable
    value:
      Uint: 1
  - name: GenMsgCycleTime
    value:
      Uint: 0
  - name: SPN
    value:
      Uint: 0
  - name: DBName
    value:
      String: ""
  - name: BusType
    value:
      String: CAN
  - name: ProtocolType
    value:
      String: J1939
  - name: VFrameFormat
    value:
      String: J1939PG
attribute_values_database:
  - name: DBName
    value:
      String: foo
attribute_values_node:
  - name: NmStationAddress
    node_name: Node2
    value:
      Uint: 2
  - name: NmStationAddress
    node_name: Node1
    value:
      Uint: 1
attribute_values_message:
  - name: VFrameFormat
    message_id:
      Extended: 355729921
    value:
      Uint: 3
attribute_values_signal:
  - name: SPN
    message_id:
      Extended: 355729921
    signal_name: Signal1
    value:
      Uint: 500
